--- a/public/biography/index.html
+++ b/public/biography/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>Biography - Sumit Yadav Blog</title><meta name="Description" content="biography."><meta property="og:title" content="Biography" />
+        <title>Biography - Sumit Yadav</title><meta name="Description" content="biography."><meta property="og:title" content="Biography" />
 <meta property="og:description" content="biography." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://sumityadav.com.np/biography/" /><meta property="og:image" content="http://sumityadav.com.np/logo.png"/><meta property="article:section" content="" />
@@ -41,10 +41,10 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="Sumit Yadav Blog">Sumit Yadav</a>
+            <a href="/" title="Sumit Yadav">Sumit Yadav</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item active" href="/biography/" title="For You!!"> Biography </a><a class="menu-item" href="/photography/"> Photography </a><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/categories/"> Categories </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/posts/" title="POST"> Posts </a><a class="menu-item" href="/categories/"> Categories </a><a class="menu-item active" href="/biography/"> Biography </a><a class="menu-item" href="/photography/"> Photography </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -65,7 +65,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="Sumit Yadav Blog">Sumit Yadav</a>
+                <a href="/" title="Sumit Yadav">Sumit Yadav</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -87,7 +87,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/biography/" title="For You!!">Biography</a><a class="menu-item" href="/photography/" title="">Photography</a><a class="menu-item" href="/posts/" title="">Posts</a><a class="menu-item" href="/categories/" title="">Categories</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/posts/" title="POST">Posts</a><a class="menu-item" href="/categories/" title="">Categories</a><a class="menu-item" href="/biography/" title="">Biography</a><a class="menu-item" href="/photography/" title="">Photography</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw"></i>
             </a></div>
     </div>
@@ -136,8 +136,8 @@ Tribhuvan University, Nepal</p>
 <h2 id="find-my-cv--herecvpdf">Find my CV &gt; <a href="/cv.pdf" rel="">HERE</a>.</h2>
 </div><div id="comments"></div></div></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.84.0">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw"></i> LoveIt</a>
-                </div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2019 - 2021</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="sumityadav.com.np" target="_blank">rockerritesh</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
+        <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.83.1">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw"></i> LoveIt</a>
+                </div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2019 - 2021</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="http://sumityadav.com.np" target="_blank">rockerritesh</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
         </div>
     </footer></div>
 
